osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_disallows_nodes_not_explicitly_allowed.txt
error: unexpected node type: `FormatString`
--> main.sml:1:13
     |
   1 | Query = A == f'{B}'
     |              ^
